--- a/examples/node/package.json
+++ b/examples/node/package.json
@@ -4,7 +4,5 @@
   "main": "index.js",
   "author": "dorayakikun <amakunai.dorayaki@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "pngjs": "^3.4.0"
-  }
+  "dependencies": {}
 }
