--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-oxipng = { git = "https://github.com/dorayakikun/oxipng", version = "2", features = [] }
-
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
-
-[features]
-wasm_syscall = []
+oxipng = { git = "https://github.com/RReverser/oxipng", branch = "wasm", features = ["binary"] }
