--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-oxipng = { git = "https://github.com/RReverser/oxipng", branch = "wasm", features = ["binary"] }
+oxipng = { git = "https://github.com/RReverser/oxipng", branch = "wasm", default-features = false }
